istio-resources/argocd/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "argocd.192.168.33.240.nip.io"
  gateways:
  - argocd-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - argocd.192.168.33.240.nip.io
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
